--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.39"
+colored = "3.0.0"
 dialoguer = "0.11.0"
 duckdb = { version = "1.2.0", features = ["bundled"] }
 prettytable-rs = "0.10.0"
